--- a/srcs/PokemonCardTraderBot.Core/PokemonCardTraderBot.Core.csproj
+++ b/srcs/PokemonCardTraderBot.Core/PokemonCardTraderBot.Core.csproj
@@ -2,6 +2,19 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>PokemonCardTraderBot.Core</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="DSharpPlus" Version="4.0.1" />
+      <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0-preview.6.21352.12" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0-preview.6.21352.12" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PokemonCardTraderBot.Common\PokemonCardTraderBot.Common.csproj" />
+    </ItemGroup>
 
 </Project>
