--- a/srcs/PokemonCardTraderBot.Common/PokemonCardTraderBot.Common.csproj
+++ b/srcs/PokemonCardTraderBot.Common/PokemonCardTraderBot.Common.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0-preview.6.21352.12" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0-preview.6.21352.12" />
+      <PackageReference Include="PokemonTcgSdk" Version="1.1.1" />
     </ItemGroup>
 
 </Project>
