--- a/srcs/PokemonCardTraderBot.Core/PokemonCardTraderBot.Core.csproj
+++ b/srcs/PokemonCardTraderBot.Core/PokemonCardTraderBot.Core.csproj
@@ -8,9 +8,7 @@
     <ItemGroup>
       <PackageReference Include="DSharpPlus" Version="4.0.1" />
       <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0-preview.6.21352.12" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0-preview.6.21352.12" />
+      <PackageReference Include="PokemonTcgSdk" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
