Add rare cards rarities handling

--- a/config/rarities_config.json
+++ b/config/rarities_config.json
@@ -1,6 +1,6 @@
 ﻿{
   "Rare": {
-    "Rarities": ["Rare", "Rare Holo"],
+    "Rarities": ["Rare", "Rare Holo", "Shining"],
     "DropChance": 0.852
   },
   "UltraRare": {
