Begin database implementation

--- a/srcs/PokemonCardTraderBot.Core/appsettings.json
+++ b/srcs/PokemonCardTraderBot.Core/appsettings.json
@@ -1,4 +1,11 @@
 {
   "TOKEN": "",
-  "PREFIX": ""
+  "PREFIX": "",
+  "DatabaseOptions": {
+    "Ip": "",
+    "Username": "",
+    "Password": "",
+    "Database": "",
+    "Port": ""
+  }
 }
