Add configuration/option files usage, clean some code

--- a/srcs/PokemonCardTraderBot.Core/appsettings.json
+++ b/srcs/PokemonCardTraderBot.Core/appsettings.json
@@ -1,6 +1,11 @@
 {
-  "TOKEN": "",
-  "PREFIX": "",
+  "ConfigurationFilesOptions": {
+    "FolderPath": "E:/Dev/C#/PokemonCardTraderBot/config"
+  },
+  "DiscordBotOptions": {
+    "Token": "ODY3Nzg4MTkzMTY4MDk3MzEw.YPmMuw.ANwu05HTXUPQ598mHhSutf-LM80",
+    "Prefixes": [";"]
+  },
   "DatabaseOptions": {
     "Ip": "",
     "Username": "",
