--- a/srcs/PokemonCardTraderBot.Core/PokemonCardTraderBot.Core.csproj
+++ b/srcs/PokemonCardTraderBot.Core/PokemonCardTraderBot.Core.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PokemonCardTraderBot.Common\PokemonCardTraderBot.Common.csproj" />
+      <ProjectReference Include="..\PokemonCardTraderBot.Database\PokemonCardTraderBot.Database.csproj" />
     </ItemGroup>
 
 </Project>
