--- a/srcs/PokemonCardTraderBot.Core/appsettings.json
+++ b/srcs/PokemonCardTraderBot.Core/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConfigurationFilesOptions": {
-    "FolderPath": "E:/Dev/C#/PokemonCardTraderBot/config"
+    "FolderPath": ""
   },
   "DiscordBotOptions": {
-    "Token": "ODY3Nzg4MTkzMTY4MDk3MzEw.YPmMuw.ANwu05HTXUPQ598mHhSutf-LM80",
-    "Prefixes": [";"]
+    "Token": "",
+    "Prefixes": [""]
   },
   "DatabaseOptions": {
     "Ip": "",
