--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ BenchmarkDotNet.Artifacts/
 # .NET Core
 project.lock.json
 project.fragment.lock.json
+appsettings.*
 artifacts/
 
 # StyleCop
@@ -351,5 +352,3 @@ MigrationBackup/
 # Jetbrains IDEs
 .idea/ 
 
-# appsettings
-appsettings.json
